--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
 body {
   font-family: "Outfit";
-  background: #d6e2f0;
+  background: #000000;
   margin: 0;
 }
 
@@ -28,7 +28,7 @@ body {
   text-decoration: none;
   font-weight: bold;
   color: #1f3251;
-  font-size: 1.5em;
+  font-size: auto;
   text-align: center;
 }
 
@@ -37,5 +37,69 @@ body {
   color: #a6afb9;
   font-weight: 400;
   font-size: 15px;
+}
+
+@media only screen and (min-width: 550px) {
+  .background {
+    padding: 5em 8em 5em 8em;
+  }
+  .white-card {
+    background: white;
+    padding: 2em 2em;
+    height: auto;
+    border-radius: 25px;
+  }
+  .qr-code-section img {
+    border-radius: 8px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+  .qr-code-section .title-of-card {
+    text-decoration: none;
+    font-weight: bold;
+    color: #1f3251;
+    font-size: 13px;
+    text-align: center;
+  }
+  .qr-code-section p {
+    text-align: center;
+    color: #a6afb9;
+    font-weight: 400;
+    font-size: 10px;
+  }
+}
+
+@media only screen and (min-width: 1250px) {
+  .background {
+    padding: 20em 33em;
+  }
+  .white-card {
+    background: white;
+    padding: 2em 2em;
+    height: auto;
+    border-radius: 25px;
+  }
+  .qr-code-section img {
+    border-radius: 8px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+  .qr-code-section .title-of-card {
+    text-decoration: none;
+    font-weight: bold;
+    color: #1f3251;
+    font-size: 28px;
+    text-align: center;
+  }
+  .qr-code-section p {
+    text-align: center;
+    color: #a6afb9;
+    font-weight: 400;
+    font-size: 20px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
