--- a/css/main.scss
+++ b/css/main.scss
@@ -98,6 +98,7 @@ body {
             width: 100%;
             margin-left: auto;
             margin-right: auto;
+            //yes//
             display: block;
           }
         .title-of-card {
